--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
-    <button>click me daddy</button>
+    <div class="board">
+      <button class="cellBtn"></button>
+      <button class="cellBtn"></button>
+      <button class="cellBtn"></button>
+      <button class="cellBtn"></button>
+      <button class="cellBtn"></button>
+      <button class="cellBtn"></button>
+      <button class="cellBtn"></button>
+      <button class="cellBtn"></button>
+      <button class="cellBtn"></button>
+    </div>
   </body>
 </html>
