--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   </head>
   <body>
     <div class="board">
-      <button class="cellBtn"></button>
-      <button class="cellBtn"></button>
-      <button class="cellBtn"></button>
-      <button class="cellBtn"></button>
-      <button class="cellBtn"></button>
-      <button class="cellBtn"></button>
-      <button class="cellBtn"></button>
-      <button class="cellBtn"></button>
-      <button class="cellBtn"></button>
+      <button class="btn1"></button>
+      <button class="btn2"></button>
+      <button class="btn3"></button>
+      <button class="btn4"></button>
+      <button class="btn5"></button>
+      <button class="btn6"></button>
+      <button class="btn7"></button>
+      <button class="btn8"></button>
+      <button class="btn9"></button>
     </div>
   </body>
 </html>
