--- a/index.html
+++ b/index.html
@@ -9,16 +9,7 @@
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
-    <div class="board">
-      <button class="btn1"></button>
-      <button class="btn2"></button>
-      <button class="btn3"></button>
-      <button class="btn4"></button>
-      <button class="btn5"></button>
-      <button class="btn6"></button>
-      <button class="btn7"></button>
-      <button class="btn8"></button>
-      <button class="btn9"></button>
-    </div>
+    <div class="home"></div>
+    <div class="board"></div>
   </body>
 </html>
