--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
-    <div class="home"></div>
+    <div class="home">
+      <button id="change">start</button>
+    </div>
     <div class="board"></div>
   </body>
 </html>
