Put the div.board inside a new div.board-container

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="home">
       <button id="change">start</button>
     </div>
-    <div class="board"></div>
+    <div class="board-container">
+      <div class="board"></div>
+    </div>
   </body>
 </html>
