--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <button id="change">start</button>
     </div> -->
     <div class="board-container">
+      <h2>current players turn</h2>
       <div class="board"></div>
     </div>
   </body>
