--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
-    <!-- <div class="home">
+    <div class="home">
       <button id="change">start</button>
-    </div> -->
+    </div>
     <div class="board-container">
       <h2><span></span> turn</h2>
       <div class="board"></div>
