Change id of play button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="home">
-      <button id="change-page">start</button>
+      <button id="play">PLAY</button>
     </div>
     <div class="board-container">
       <h2><span></span> turn</h2>
