Give classes to span elements to differentiate

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   </head>
   <body>
     <div class="home">
-      <button id="play">PLAY</button>
+      <button id="play">
+        <span class="x">X</span><span class="o">O</span>
+      </button>
     </div>
     <div class="board-container">
-      <h2><span></span> turn</h2>
+      <h2><span class="turn-name"></span> turn</h2>
       <div class="board"></div>
     </div>
   </body>
