Create h1 with each word wrapped in span

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   </head>
   <body>
     <div class="home">
+      <h1>
+        <span class="tic">Tic</span>-<span class="tac">Tac</span>-<span
+          class="toe"
+          >Toe</span
+        >
+      </h1>
+
       <button id="play">
         <span class="x">X</span><span class="o">O</span>
       </button>
