Remove dashes from tic tac toe heading

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
   <body>
     <div class="home">
       <h1>
-        <span class="tic">Tic</span>-<span class="tac">Tac</span>-<span
-          class="toe"
-          >Toe</span
-        >
+        <span class="tic">Tic</span> <span class="tac">Tac</span>
+        <span class="toe">Toe</span>
       </h1>
 
       <button id="play">
