Add a return button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="board-container">
       <h2><span class="turn-name"></span> turn</h2>
       <div class="board"></div>
+      <button id="return">Return</button>
     </div>
   </body>
 </html>
