Add modal and overlay

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <h2><span class="turn-name"></span> turn</h2>
       <div class="board"></div>
       <button id="return">Return</button>
+      <div id="gameover"></div>
+      <div id="overlay"></div>
     </div>
   </body>
 </html>
