Add a heading and button in modal

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       <h2><span class="turn-name"></span> turn</h2>
       <div class="board"></div>
       <button id="return">Return</button>
-      <div id="gameover"></div>
+      <div id="gameover">
+        <h2><span></span> won!</h2>
+        <button>Play again?</button>
+      </div>
       <div id="overlay"></div>
     </div>
   </body>
