Give h2 in modal a class

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="board"></div>
       <button id="return">Return</button>
       <div id="gameover">
-        <h2><span id="winner"></span> won!</h2>
+        <h2 class="modalh2"><span id="winner"></span> won!</h2>
         <button>Play again?</button>
       </div>
       <div id="overlay"></div>
