--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <button id="return">Return</button>
       <div id="gameover">
         <h2 class="modalh2"><span id="winner"></span> won!</h2>
-        <button class="playAgain">Play again?</button>
+        <button class="playAgain">Play again</button>
       </div>
       <div id="overlay"></div>
     </div>
