Add form element with two text inputs

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
         <span class="toe">Toe</span>
       </h1>
 
+      <form action="" method="post">
+        <div>
+          <label for="p1">Player one:</label>
+          <input type="text" id="p1" name="p1" placeholder="Walter" />
+        </div>
+
+        <div>
+          <label for="p2">Player two:</label>
+          <input type="text" id="p2" name="p2" placeholder="Jesse" />
+        </div>
+      </form>
+
       <button id="play">
         <span class="x">X</span><span class="o">O</span>
       </button>
